[project]
name = "hashed-password-crack-test-tool"
version = "0.0.1"
description = "Hashed Password Crack Test Tool"
authors = [
    {name = "Adrien Carpentier", email = "me@adriencarpentier.com"},
]
dependencies = [
    "search-that-hash>=0.2.8",
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

